Improve code as per review